# imxrt-dma

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  crates.js  help.html  index.html  search-index.js  settings.html  source-files.js  src-files.js
.github/workflows/: ci.yml  doc.yml  teensy4.yml
examples/teensy4/: Cargo.toml  README.md
examples/teensy4/src/: logging.rs  support.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.Sync.js  (+2 more)
implementors/imxrt_dma/: trait.Element.js
imxrt_dma/: all.html  enum.BandwidthControl.html  enum.ChannelConfiguration.html  fn.block.html  fn.on_error.html  fn.on_interrupt.html  fn.poll_no_wake.html  fn.set_destination_circular_buffer.html  fn.set_destination_hardware.html  fn.set_destination_linear_buffer.html  fn.set_source_circular_buffer.html  fn.set_source_hardware.html  fn.set_source_linear_buffer.html  index.html  sidebar-items.js  struct.Channel.html  struct.Dma.html  struct.Error.html  struct.Transfer.html  trait.Element.html  type.Result.html
imxrt_dma/channel/: enum.ChannelConfiguration.html  enum.Configuration.html  fn.set_destination_circular_buffer.html  fn.set_destination_hardware.html  fn.set_destination_linear_buffer.html  fn.set_source_circular_buffer.html  fn.set_source_hardware.html  fn.set_source_linear_buffer.html  index.html  sidebar-items.js  struct.Channel.html
imxrt_dma/element/: trait.Element.html
imxrt_dma/error/: struct.Error.html
imxrt_dma/interrupt/: fn.on_error.html  fn.on_interrupt.html  struct.Transfer.html
imxrt_dma/memcpy/: fn.memcpy.html  index.html  sidebar-items.js  struct.Memcpy.html
imxrt_dma/peripheral/: fn.full_duplex.html  fn.read.html  fn.receive.html  fn.transfer.html  fn.write.html  index.html  sidebar-items.js  struct.FullDuplex.html  struct.Read.html  struct.Rx.html  struct.Tx.html  struct.Write.html  trait.Bidirectional.html  trait.Destination.html  trait.Source.html
search.desc/imxrt_dma/: imxrt_dma-desc-0-.js
src/: channel.rs  element.rs  error.rs  futures.rs  interrupt.rs  lib.rs  memcpy.rs  peripheral.rs  ral.rs
src/imxrt_dma/: channel.rs.html  element.rs.html  error.rs.html  interrupt.rs.html  lib.rs.html  memcpy.rs.html  peripheral.rs.html  ral.rs.html
src/ral/: dmamux.rs  tcd.rs
(+26 files in other folders)
