[package]
name = "imxrt-dma"
version = "0.1.0"
authors = ["Ian McIntyre <ianpmcintyre@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT OR Apache-2.0"
description = """
DMA driver for i.MX RT processors
"""
keywords = ["imxrt", "nxp", "embedded"]
categories = ["embedded", "no-std"]

[dependencies]
cortex-m = "0.7.2"
ral-registers = "0.1"
