[package]
name = "examples-teensy4"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false  # This is an example package

# The library we're demonstrating
[dependencies.imxrt-dma]
path = "../../"

# Supporting other hardware access, start-up
[dependencies.teensy4-bsp]
version = "0.2"
features = ["rt"]

# Runtime support
[dependencies.cortex-m-rt]
features = ["device"]
version = "0.6.13"

# Simple panic handler
#
# The 0.1 release, plus a patch to expose the S.O.S. blink
# routine independent of the panic handler. This lets us
# implement our own panic handler that logs data and still
# blinks the same way.
[dependencies.teensy4-panic]
version = "0.2"
default-features = false

# Logging configuration, and logging within the
# examples
[dependencies.log]
version = "0.4"
features = ["release_max_level_info"]

[dependencies.cortex-m]
version = "0.7"

[dependencies.pin-utils]
version = "0.1"

[lib]
name = "support"
path = "src/support.rs"
